@@ -1,6 +1,7 @@
 Revision history for Perl extension OrePAN2
 
 {{$NEXT}}
+    - OrePAN2::Repository::gc() now optionally accepts an anonymous sub (Olaf Alders).
 
 0.43 2016-07-30T15:41:31Z
     - Bump MetaCPAN::Client version to 1.021000 (Mickey Nasriachi)
